add docker-compose.yml and improved structuring

--- a/lab1/Dockerfile
+++ b/lab1/Dockerfile
@@ -1,4 +1,4 @@
-# Use the official Python image (for example, version 3.12.8 based on slim)
+# Use an official Python runtime as a parent image
 FROM python:3.12.8-slim-bookworm
 
 # Set the working directory in the container
@@ -6,6 +6,9 @@ WORKDIR /app
 
 # Copy all project files to the container
 COPY . .
+
+# Setting up dependencies
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Command to start the project
 CMD ["python", "main.py"]
