--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,3 +31,14 @@ services:
       - ./lab3/data:/app/data     # Maps data input
       - ./lab3/output:/app/output # Maps output folder
     command: python main.py
+
+  lab4:
+    build:
+      context: ./lab4
+    container_name: lab4
+    working_dir: /app
+    volumes:
+      - ./lab4:/app               # Maps entire lab4 folder
+      - ./lab4/data:/app/data     # Maps data input
+      - ./lab4/output:/app/output # Maps output folder
+    command: python main.py
