--- a/.github/workflows/lab4-ci.yml
+++ b/.github/workflows/lab4-ci.yml
@@ -29,4 +29,4 @@ jobs:
       uses: docker/setup-buildx-action@v3 
 
     - name: Run Lab 4 tests with Docker Compose
-      run: docker-compose run --rm lab4 pytest
+      run: docker compose run --rm lab4 pytest
