--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,4 +41,6 @@ services:
       - ./lab4:/app               # Maps entire lab4 folder
       - ./lab4/data:/app/data     # Maps data input
       - ./lab4/output:/app/output # Maps output folder
+    stdin_open: true  # Keep STDIN open for interactive input (input())
+    tty: true         # Allocate a pseudo-TTY for interactive session
     command: python main.py
