--- a/.github/workflows/lab5-ci.yml
+++ b/.github/workflows/lab5-ci.yml
@@ -5,7 +5,6 @@ on:
     branches: [ "feature/05-tkinter-gui" ] 
     paths: 
       - 'lab5/**'
-      - 'docker-compose.yml' 
       - '.github/workflows/lab5-ci.yml' 
 
 permissions:
@@ -20,7 +19,8 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Build Lab 5 Docker image
-      uses: docker compose build lab5
+      uses: docker compose run --rm lab5
+      
 
     - name: Set up Docker Compose
       uses: docker/setup-buildx-action@v3 
