--- a/lab5/Dockerfile
+++ b/lab5/Dockerfile
@@ -4,6 +4,13 @@ FROM python:3.12.8-slim-bookworm
 # Set the working directory in the container
 WORKDIR /app
 
+# Install system dependencies for Tkinter and X11 forwarding
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    tk8.6 \
+    python3-tk \
+    libx11-6 \
+    && rm -rf /var/lib/apt/lists/*
+
 # Copy all project files to the container
 COPY . .
 
