--- a/lab5/Dockerfile
+++ b/lab5/Dockerfile
@@ -1,5 +1,6 @@
 # Use an official Python runtime as a parent image
-FROM python:3.12.8-slim-bookworm
+# FROM python:3.13.3-alpine
+FROM python:3.13.3-slim-bookworm
 
 # Set the working directory in the container
 WORKDIR /app
