--- a/.github/workflows/lab6-ci.yml
+++ b/.github/workflows/lab6-ci.yml
@@ -6,25 +6,50 @@ on:
     paths:
       - 'lab6/**'
       - '.github/workflows/lab6-ci.yml'
+  pull_request:
+    branches: [ "main" ]
+    paths:
+      - 'lab6/**'
+      - '.github/workflows/lab6-ci.yml'
 
 permissions:
-  contents: read 
+  contents: read
 
 jobs:
-  build-lab6: 
-    name: Build Lab 6 Docker Image 
-    runs-on: ubuntu-latest 
-
+  build:
+    name: Build Docker Image
+    runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    - name: Build Docker image for Lab 6
-      run: |
-        docker build \
-          --tag lab6-image:latest \
-          --file ./lab6/Dockerfile \
-          ./lab6
+      - name: Build Docker image
+        id: docker_build
+        run: |
+          docker build \
+            --tag lab6-image:latest \
+            --file ./lab6/Dockerfile \
+            ./lab6
+          echo "Image built successfully: lab6-image:latest"
+
+  test:
+    name: Run Pytest Tests
+    runs-on: ubuntu-latest
+    needs: build 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Compose
+        uses: docker/setup-buildx-action@v3
+
+      - name: Run tests using Docker Compose
+        env:
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+        run: |
+          echo "Running tests within the container..."
+          # Передаємо змінну середовища GOOGLE_API_KEY в контейнер
+          docker compose run --rm -e GOOGLE_API_KEY=$GOOGLE_API_KEY lab6 pytest tests/
